fix label spacing

--- a/src/App.css
+++ b/src/App.css
@@ -180,14 +180,13 @@ button:hover{
   display: flex;
   flex-direction: column;
   justify-content: center;
-
 }
 .cartContainer {
   display: flex;
   flex-direction: column;
   gap: 5px;
   align-self: center;
-  width: 40vw;
+  width: 60vw;
   max-height: 60vh;
   overflow: scroll;
   padding-inline: 10px;
@@ -202,27 +201,28 @@ button:hover{
   display: flex;
   justify-content: space-between;
   align-items: center;
-
 }
 .cartItem img {
-  padding-left:  5%;
+  margin-left:  2%;
+  margin: 1%;
+  box-shadow: 0px 0px 5px 1px var(--light-gray);
 }
 .cartItem button {
   padding-inline: 10px;
   padding: 5px;
-  align-self: flex-end;
+  align-self: flex-start;
   margin: 0;
-
-  
 }
 .cartItem > div {
   display: flex;
-  flex-direction: column;
-  gap: 15px;
-  width: 150px;
-  min-height: 150px;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding-bottom: 5px;
+  width: 100%;
+  height: 100%;
   justify-content: space-between;
 }
+
 
 .Pricing {
   border: 1px solid black;
@@ -235,7 +235,7 @@ button:hover{
   min-width: fit-content;
   min-height: max-content;
 
-  width: 300px;
+  width: 250px;
   height: 20rem;
 
 }
